@@ -2,10 +2,10 @@ package com.example.fixedwidthjob;
 
 import org.springframework.batch.core.Job;
 import org.springframework.batch.core.Step;
-import org.springframework.batch.core.configuration.annotation.EnableBatchProcessing;
-import org.springframework.batch.core.configuration.annotation.JobBuilderFactory;
-import org.springframework.batch.core.configuration.annotation.StepBuilderFactory;
 import org.springframework.batch.core.configuration.annotation.StepScope;
+import org.springframework.batch.core.job.builder.JobBuilder;
+import org.springframework.batch.core.repository.JobRepository;
+import org.springframework.batch.core.step.builder.StepBuilder;
 import org.springframework.batch.item.ItemWriter;
 import org.springframework.batch.item.file.FlatFileItemReader;
 import org.springframework.batch.item.file.builder.FlatFileItemReaderBuilder;
@@ -16,18 +16,17 @@ import org.springframework.boot.SpringApplication;
 import org.springframework.boot.autoconfigure.SpringBootApplication;
 import org.springframework.context.annotation.Bean;
 import org.springframework.core.io.Resource;
+import org.springframework.transaction.PlatformTransactionManager;
 
-import java.util.Arrays;
 import java.util.List;
 
 @SpringBootApplication
-@EnableBatchProcessing
 public class FixedWidthJobApplication {
     @Autowired
-    private JobBuilderFactory jobBuilderFactory;
+    private JobRepository jobRepository;
 
     @Autowired
-    private StepBuilderFactory stepBuilderFactory;
+    private PlatformTransactionManager manager;
 
     @Bean
     @StepScope
@@ -52,8 +51,8 @@ public class FixedWidthJobApplication {
 
     @Bean
     public Step copyFileStep() {
-        return this.stepBuilderFactory.get("copyFileStep")
-                .<Customer, Customer>chunk(100)
+        return new StepBuilder("copyFileStep", jobRepository)
+                .<Customer, Customer>chunk(100, manager)
                 .reader(customerItemReader(null))
                 .writer(itemWriter())
                 .build();
@@ -61,13 +60,13 @@ public class FixedWidthJobApplication {
 
     @Bean
     public Job job() {
-        return this.jobBuilderFactory.get("job")
+        return new JobBuilder("job", jobRepository)
                 .start(copyFileStep())
                 .build();
     }
 
     public static void main(String[] args) {
-        List<String> realArgs = Arrays.asList("customerFile=/input/customerFixedWidth.txt");
+        List<String> realArgs = List.of("customerFile=/input/customerFixedWidth.txt");
         SpringApplication.run(FixedWidthJobApplication.class, realArgs.toArray(new String[1]));
     }
 }
